--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 
 @import '~slick-carousel/slick/slick.css';
 @import '~slick-carousel/slick/slick-theme.css';
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* 모달 오픈 애니메이션 */
 @keyframes modal-open {
